Integrate R2
